--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -77,7 +77,7 @@
                             <p>Rafael Talavera es el encargado de emitir la póliza y cuando comienza con el trámite se percata de las siguientes situaciones:</p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag26/icon1.svg" alt="icono">
+                            <img src="./build/img/contenido/Pag26/icon1.svg" alt="icono">
                         </figure>
                     </div>
                   </div>
@@ -87,7 +87,7 @@
                             <p>Ha recibido un correo por el que el Agente de Seguros xxx le solicita que lo ayude para que el pago se realice en efectivo y aprovechando la comunicación, le permita entregar los documentos de identificación con posterioridad.</p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag26/icon2.svg" alt="icono">
+                            <img src="./build/img/contenido/Pag26/icon2.svg" alt="icono">
                         </figure>
                       </div>
                   </div>
@@ -98,7 +98,7 @@
                             </p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag26/icon3.svg" alt="icono">
+                            <img src="./build/img/contenido/Pag26/icon3.svg" alt="icono">
                         </figure>
                       </div>
                   </div>
@@ -109,7 +109,7 @@
                             </p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag26/icon4.svg" alt="icono">
+                            <img src="./build/img/contenido/Pag26/icon4.svg" alt="icono">
                         </figure>
                       </div>
                   </div>
@@ -120,7 +120,7 @@
                             </p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag26/icon5.svg" alt="icono">
+                            <img src="./build/img/contenido/Pag26/icon5.svg" alt="icono">
                         </figure>
                       </div>
                   </div>
@@ -131,7 +131,7 @@
                             </p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag26/icon6.svg" alt="icono">
+                            <img src="./build/img/contenido/Pag26/icon6.svg" alt="icono">
                         </figure>
                       </div>
                   </div>
@@ -144,7 +144,166 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
+
+            <div id="cont-inicio">
+                <a id="btn-iniciarAseguradora" href="#cont-preguntasAseguradora">Iniciar</a>
+            </div>
+        </div>
+
+        <div id="cont-preguntasAseguradora">
+            <div class="preguntasAseguradora" id="pregunta1">
+                <div class="encabezado">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag26/persona-circulo.svg" alt="hombre">
+                    </figure>
+                    <div class="pregunta">
+                        <p>¿Por qué el cliente quiere pagar la póliza en efectivo?</p>
+                    </div>
+                    <div class="instruccion">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag26/Mano.svg" alt="mano">
+                        </figure>
+                        <p>Selecciona el inciso que consideres correcto</p>
+                    </div>
+                </div>
+                <div class="opciones">
+                    <div class="opcionA opcionInciso">
+                        <div class="inciso">
+                            <h4>A)</h4>
+                        </div>
+                        <div id="respuestaA1_1" class="respuesta">
+                            <p>Deberíamos explorar la posibilidad de permitirle el pago en efectivo, ya que el cliente tiene toda la disposición de hacerlo por sus motivos personales.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="opcionB opcionInciso">
+                        <div class="inciso">
+                            <h4>B)</h4>
+                        </div>
+                        <div id="respuestaB1_1" class="respuesta">
+                            <p>Sin importar los motivos, se considera una operación relevante, es necesario que alerte de esta situación al Oficial de Cumplimiento para que realicen una investigación del caso.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div id="bloqueo1_1" class="cont-bloquear"></div>
+                </div>
+
+                <div class="cont-btn">
+                    <a id="siguiente1_1" href="#pregunta2">Siguiente</a>
+                </div>
+            </div>
+
+            <div class="preguntasAseguradora" id="pregunta2">
+                <div class="encabezado">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag26/persona-circulo.svg" alt="hombre">
+                    </figure>
+                    <div class="pregunta">
+                        <p>¿La aseguradora puede aceptar documentos vencidos 
+                            e información ilegible del cliente? </p>
+                    </div>
+                    <div class="instruccion">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag26/Mano.svg" alt="mano">
+                        </figure>
+                        <p>Selecciona el inciso que consideres correcto</p>
+                    </div>
+                </div>
+                <div class="opciones">
+                    <div class="opcionA opcionInciso">
+                        <div class="inciso">
+                            <h4>A)</h4>
+                        </div>
+                        <div id="respuestaA2_1" class="respuesta">
+                            <p>No es posible aceptar ninguna documentación que no esté actualizada y que contenga toda la información legible.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="opcionB opcionInciso">
+                        <div class="inciso">
+                            <h4>B)</h4>
+                        </div>
+                        <div id="respuestaB2_1" class="respuesta">
+                            <p>No pasa nada si dejo pasar una identificación ilegible y no vigente.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div id="bloqueo2_1" class="cont-bloquear"></div>
+                </div>
+                <div class="cont-btn">
+                    <a id="siguiente2_1" href="#pregunta3">Siguiente</a>
+                </div>
+            </div>
+
+            <div class="preguntasAseguradora" id="pregunta3">
+                <div class="encabezado">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag26/persona-circulo.svg" alt="hombre">
+                    </figure>
+                    <div class="pregunta">
+                        <p>¿Por qué el Agente está presionando para no identificarlo de acuerdo con el umbral que le corresponde al cliente y cerrar pronto la venta?</p>
+                    </div>
+                    <div class="instruccion">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag26/Mano.svg" alt="mano">
+                        </figure>
+                        <p>Selecciona el inciso que consideres correcto</p>
+                    </div>
+                </div>
+                <div class="opciones">
+                    <div class="opcionA opcionInciso">
+                        <div class="inciso">
+                            <h4>A)</h4>
+                        </div>
+                        <div id="respuestaA3_1" class="respuesta">
+                            <p>Si no lo identificamos ahora no hay ningún impacto, el Agente ya comentó que es su conocido de hace muchos años y que es un hombre muy honorable.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="opcionB opcionInciso">
+                        <div class="inciso">
+                            <h4>B)</h4>
+                        </div>
+                        <div id="respuestaB3_1" class="respuesta">
+                            <p>El Agente ya se quejó con mi superior y eso me puede traer consecuencias, mejor hacerle caso a las peticiones del Agente y no a los procesos institucionales...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div id="bloqueo3_1" class="cont-bloquear"></div>
+                </div>
+                <div class="cont-btn">
+                    <a id="siguiente3_1 href="#retro-aseguradora">Siguiente</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="retro-aseguradora">
+            <div id="retro-bien">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag26/hombre-bien.svg" alt="hombre">
+                </figure>
+                <div id="cont-logro">
+                    <div class="mensaje">
+                        <p>
+                            ¡Excelente! Has respondido correctamente a todas las preguntas de este caso. Continua con la evaluación final para terminar este curso.
+                        </p>
+                    </div>
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag26/medalla.svg" alt="medalla">
+                    </figure>
+                    <div class="texto">
+                        <p>Haz recibido un punto adicional para la evaluación final del curso
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div id="retro-mal">
+
+            </div>
         </div>
     </div>
 
