cambios scss y pagina 16

--- a/contenido/pag07.html
+++ b/contenido/pag07.html
@@ -40,7 +40,7 @@
             </div>
             <div class="btn02">
                 <div id="btn-reaseguradora">
-                    <a class="btn_cuadros07" href="#info-reaseguradora">Reaseguradora <p>Patria</p></a>
+                    <a class="btn_cuadros07" href="#info-reaseguradora">Reaseguradora Patria</a>
                 </div>
                 <div class ="cuadros07" id="info-reaseguradora">
                     <span>Utiliza el formato de Identificación de la Cedente.</span>
