--- a/contenido/pag16.html
+++ b/contenido/pag16.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 16</title>
 </head>
+
 <body>
-    Página 16
+    <div id="cont-pag16">
+        <div id="cont-izquierda">
+            <div id="cont-img">
+                <figure class="personaje">
+                    <img src="./build/img/contenido/Pag16/personaje.svg" alt="Personaje">
+                </figure>
+                <div id="globo1">
+                    <p>
+                        No olvides que las LISTAS DE PERSONAS BLOQUEADAS son emitidas por organismos y autoridades
+                        nacionales e internacionales e incluyen personas físicas y morales que participan o se
+                        relacionan con el Lavado de Dinero y Financiamiento al Terrorismo.
+                    </p>
+                </div>
+            </div>
+            <div id="cont-gris">
+                <div id="globo2">
+                    <p>
+                        La Compañía cuando identifique que al celebrar una operación, el nombre de su cliente se
+                        encuentra dentro de las LISTAS DE PERSONAS BLOQUEADAS, o que terceros las efectúan, remitirá un
+                        reporte de Operación Inusual a la SHCP por conducto de la CNSF dentro de las 24 horas contadas
+                        a partir de que se conozca dicha información; asimismo, no iniciará relación comercial con el
+                        Cliente.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="cont-derecha">
+            <div id="cont-vino">
+                <p>La Compañía no inicia relaciones comerciales con las personas que posean las siguientes 
+                    características.
+                </p>
+            </div>
+            <div id="instrucciones">
+                <figure class="mano">
+                    <img src="./build/img/contenido/Pag16/mano.svg" alt="Mano">
+                </figure>
+                <p>Da clic en cada botón para conocerlas:</p>
+            </div>
+            <div id="botones">
+                <div id="btn-aseguradora">
+                    <a href="#">Aseguradora</a>
+                </div>
+                <div id="btn-reaseguradora">
+                    <a href="#">Reaseguradora Patria</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
