:construction: Respuestas aseguradora

--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="cont-btn">
-                    <a id="siguiente1_1" href="#pregunta2">Siguiente</a>
+                    <a class="botonSiguiente1" id="siguiente1_1" href="#pregunta2">Siguiente</a>
                 </div>
             </div>
 
@@ -234,7 +234,7 @@
                     <div id="bloqueo2_1" class="cont-bloquear"></div>
                 </div>
                 <div class="cont-btn">
-                    <a id="siguiente2_1" href="#pregunta3">Siguiente</a>
+                    <a class="botonSiguiente1" id="siguiente2_1" href="#pregunta3">Siguiente</a>
                 </div>
             </div>
 
@@ -276,7 +276,7 @@
                     <div id="bloqueo3_1" class="cont-bloquear"></div>
                 </div>
                 <div class="cont-btn">
-                    <a id="siguiente3_1 href="#retro-aseguradora">Siguiente</a>
+                    <a class="botonSiguiente1" id="siguiente3_1" href="#retro-aseguradora">Siguiente</a>
                 </div>
             </div>
         </div>
