--- a/contenido/pag16.html
+++ b/contenido/pag16.html
@@ -37,7 +37,7 @@
         </div>
         <div id="cont-derecha">
             <div id="cont-vino">
-                <p>La Compañía no inicia relaciones comerciales con las personas que posean las siguientes 
+                <p>La Compañía no inicia relaciones comerciales con las personas que posean las siguientes
                     características.
                 </p>
             </div>
@@ -49,12 +49,82 @@
             </div>
             <div id="botones">
                 <div id="btn-aseguradora">
-                    <a href="#">Aseguradora</a>
+                    <a class="btn-pag16" href="#aseguradora">Aseguradora</a>
                 </div>
                 <div id="btn-reaseguradora">
-                    <a href="#">Reaseguradora Patria</a>
+                    <a class="btn-pag16" href="#reaseguradora">Reaseguradora Patria</a>
                 </div>
             </div>
+        </div>
+    </div>
+    <div id="cards-pag16">
+        <div class="mapa-pag16" id="aseguradora">
+            <div class="titulo">
+                Aseguradora
+            </div>
+            <p>No se encuentra sujeta a las obligaciones, procedimientos y requisitos relativos a la Geolocalización,
+                hasta que se emitan las disposiciones de carácter general correspondientes por la CNSF.
+            </p><br>
+            <p>No celebra ni celebrará ningún tipo de operación (incluyendo operaciones anónimas o bajo nombres
+                ficticios), hasta que se hayan cumplido satisfactoriamente con los requisitos de identificación.
+            </p><br>
+            <p>
+                No tiene celebrados contratos con terceros para la celebración de entrevistas con el cliente.
+            </p><br>
+            <p>
+                No cuenta con oficinas, sucursales, agencias o filiales en el extranjero.
+            </p><br>
+            <p>
+                No forma parte de ningún grupo financiero en términos de la Ley para regular las Agrupaciones
+                Financieras.
+            </p><br>
+            <p>
+                No actúa como Reaseguradora o Reafianzadora de instituciones extranjeras.
+            </p><br>
+            <p>
+                No celebra operaciones de Fideicomisos.
+            </p><br>
+            <p>
+                La Compañía no realiza operaciones en efectivo moneda nacional y/o extranjera en cajas por cualquier
+                monto, recibiendo únicamente depósitos a través de cuentas concentradoras.
+            </p><br>
+            <p>
+                Para General de Salud, por las características de la operación, no cuenta con la figura de Comprador
+                de Salvamentos.
+            </p><br>
+        </div>
+        <div class="mapa-pag16" id="reaseguradora">
+            <div class="titulo">
+                Reaseguradora Patria
+            </div>
+            <p>
+                Persona física de nacionalidad mexicana o extranjera en condiciones de estancia de residente temporal
+                o permanente, en términos de la Ley de Migración.
+            </p><br>
+            <p>
+                Persona física de nacionalidad extranjera que no está en el territorio nacional, en condiciones de
+                estancia
+                de residente temporal o permanente en términos de la Ley de Migración.
+            </p><br>
+            <p>
+                Apoderados de las Cedentes personas morales, cuando actúen a través de ellos.
+            </p><br>
+            <p>
+                Proveedores de recursos, cuando la Compañía identifique que los recursos no son de la Cedente.
+            </p><br>
+            <p>
+                No establece relaciones con fideicomitentes, fideicomisarios, mandantes, comitentes o participantes
+                cuya identidad era indeterminada al momento de suscribirse los fideicomisos, mandatos, comisiones
+                o cualquier instrumento similar.
+            </p><br>
+            <p>
+                No realiza operaciones en efectivo moneda nacional y/o extranjera por cualquier monto, recibiendo
+                únicamente operaciones por transferencia electrónica por parte de sus Cedentes, por lo anterior,
+                no desarrolla mecanismos para dar seguimiento y, en su caso, agrupar las transacciones.
+            </p><br>
+            <p>
+                Por las características de la operación, no cuenta con la figura de Comprador de Salvamentos.
+            </p><br>
         </div>
     </div>
 </body>
