actulizacion de paginas 19-04-2022

--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -20,7 +20,7 @@
         <div class="contenedor2">
             <div class="grafica-pastel">
                 <figure class="grafica-n">
-                    <img src="./build/img/contenido/Pag17/grafica-pastel.svg" alt="grafica pastel">
+                    <img src="/build/img/contenido/Pag17/grafica-pastel.svg" alt="grafica pastel">
                 </figure>
                 <figure class="grafica-pq">
                     <img src="./build/img/contenido/Pag17/grafica-pastel-pq.svg" alt="grafica pastel">
@@ -60,6 +60,16 @@
             </p>
         </div>
     </div>
+
+    <div class="cuadroazulpag17">
+        <figure class="i-click">
+            <img src="/build/img/contenido/Pag17/i-click.svg" alt="icono de interactividad">
+        </figure>
+        <p>
+            Da click en las flechas de <b>izquierda</b> o <b>derecha</b> para conocer mas
+        </p>
+    </div>
+
     <div class="carrusel">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
