--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -12,6 +12,60 @@
             <img src="./build/img/contenido/Pag20/icon2click.svg" alt="icono click">
         </figure>
         <p>
+            Da clic en cada tarjeta para conocer más sobre cuál es la misión del Manual de Cumplimiento PLD/CFT.
+        </p>
+    </div>
+    <div class="contenedorPrinPag20">
+        <figure class="libro" id="libro1">
+            <img src="/build/img/contenido/Pag20/libro-azul.svg" alt="libro azul">
+        </figure>
+        <figure class="tarjeta" id="tarjeta1">
+            <p>
+                Cumplir con lo dispuesto por la LISF, las Disposiciones y demás normativas aplicables a la materia.
+            </p>
+        </figure>
+
+        <figure class="libro" id="libro2">
+            <img src="/build/img/contenido/Pag20/libro-naranja.svg" alt="libro naranja">
+        </figure>
+        <figure class="tarjeta" id="tarjeta2">
+            <p>
+                Establecer las medidas y procedimientos mínimos a observar para prevenir y detectar los actos, omisiones y operaciones que pudieran favorecer, prestar ayuda, auxilio o cooperación de cualquier especie para la comisión de los delitos previstos en los artículos 139, 139 Quáter, 148 Bis o 400 Bis del Código Penal Federal.
+            </p>
+        </figure>
+
+        <figure class="libro" id="libro3">
+            <img src="/build/img/contenido/Pag20/libro-amarillo.svg" alt="libro amarillo">
+        </figure>
+        <figure class="tarjeta" id="tarjeta3">
+            <p>
+                Prevenir que las Operaciones de la Compañía sean utilizadas para ocultar el origen de los recursos de procedencia ilícita y/o para financiar actos terroristas, y por lo tanto, se dañe la reputación de la Compañía.
+            </p>
+        </figure>
+
+        <figure class="libro" id="libro4">
+            <img src="/build/img/contenido/Pag20/libro-verde.svg" alt="libro verde">
+        </figure>
+        <figure class="tarjeta" id="tarjeta4">
+            <p>
+                Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitana los colaboradores de la Compañía establecer sistemas preventivos de identificación y de conocimiento del Cliente; a fin de mitigar el riesgo de realizar operaciones que pudieran verse implicadas en los supuestos antes referidos.
+            </p>
+        </figure>
+        <figure class="libro" id="libro5">
+            <img src="/build/img/contenido/Pag20/libro-azur.svg" alt="libro azul fuerte">
+        </figure>
+        <figure class="tarjeta" id="tarjeta5">
+            <p>
+                Ser una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán detectar y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al financiamiento del terrorismo; así como realizar el reporte de cualquier operación a la autoridad.
+
+            </p>
+        </figure>
+    </div>
+    <div class="cuadro2click">
+        <figure class="icon2c">
+            <img src="./build/img/contenido/Pag20/icon2click.svg" alt="icono click">
+        </figure>
+        <p>
             Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
         </p>
     </div>
