--- a/contenido/pag27.html
+++ b/contenido/pag27.html
@@ -50,7 +50,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA1">
                             <p>Cualquier colaborador</p>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB1">
                             <p>Auditoría Interna</p>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC1">
                             <p>Auditoría Interna</p>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA2">
                             <p>Narcotráfico</p>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB2">
                             <p>Lavado de dinero</p>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC2">
                             <p>Tráfico de influencias</p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA3">
                             <p>Financiamiento al terrorismo</p>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB3">
                             <p>Operación inusual</p>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC3">
                             <p>Operación Relevante</p>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA4">
                             <p>Colocación</p>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB4">
                             <p>Integración</p>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC4">
                             <p>Diversificación</p>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA5">
                             <p>Preocupante</p>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB5">
                             <p>Relevante</p>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC5">
                             <p>Inusual</p>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA6">
                             <p>Falso</p>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB6">
                             <p>Verdadero</p>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA7">
                             <p>Conocimiento del Cliente</p>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB7">
                             <p>Identificación del Cliente</p>
                         </div>
                     </div>
@@ -301,7 +301,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC7">
                             <p>Clasificación de grado de riesgo
                             </p>
                         </div>
@@ -327,7 +327,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA8">
                             <p>Falso</p>
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB8">
                             <p>Verdadero</p>
                         </div>
                     </div>
@@ -359,7 +359,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA9">
                             <p>Reunión</p>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB9">
                             <p>Comida</p>
                         </div>
                     </div>
@@ -375,7 +375,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC9">
                             <p>Entrevista Personal
                             </p>
                         </div>
@@ -401,7 +401,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA10">
                             <p>3 años</p>
                         </div>
                     </div>
@@ -409,7 +409,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB10">
                             <p>6 meses</p>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC10">
                             <p>10 años </p>
                         </div>
                     </div>
@@ -442,7 +442,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA11">
                             <p>Metodología de la Perspectiva o Metodología PR</p>
                         </div>
                     </div>
@@ -450,7 +450,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB11">
                             <p>Modelo de Clasificación del Cliente o Cedente</p>
                         </div>
                     </div>
@@ -458,7 +458,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC11">
                             <p>Metodología de Evaluación de Riesgos PLD/CFT</p>
                         </div>
                     </div>
@@ -483,7 +483,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA12">
                             <p>Conocimiento del Cliente.</p>
                         </div>
                     </div>
@@ -491,7 +491,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB12">
                             <p>Identificación del Cliente</p>
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC12">
                             <p>Clasificación de grado de riesgo</p>
                         </div>
                     </div>
@@ -524,7 +524,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA13">
                             <p>Diseño, implementación y valoración</p>
                         </div>
                     </div>
@@ -532,7 +532,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB13">
                             <p>Estudio, implementación y finalización</p>
                         </div>
                     </div>
@@ -540,7 +540,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC13">
                             <p>Diseño, valoración y proceso</p>
                         </div>
                     </div>
@@ -565,7 +565,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA14">
                             <p>Falso</p>
                         </div>
                     </div>
@@ -573,7 +573,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB14">
                             <p>Verdadero</p>
                         </div>
                     </div>
@@ -597,7 +597,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA15">
                             <p>Falso</p>
                         </div>
                     </div>
@@ -605,7 +605,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB15">
                             <p>Verdadero</p>
                         </div>
                     </div>
@@ -629,7 +629,7 @@
                         <div class="letras">
                             <h2>a.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaA16">
                             <p>Comisión Nacional de Seguros y Fianzas (CNSF)</p>
                         </div>
                     </div>
@@ -637,7 +637,7 @@
                         <div class="letras">
                             <h2>b.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaB16">
                             <p>Secretaría de la Función Pública</p>
                         </div>
                     </div>
@@ -645,7 +645,7 @@
                         <div class="letras">
                             <h2>c.</h2>
                         </div>
-                        <div class="respuesta">
+                        <div class="respuesta" id="respuestaC16">
                             <p>Banco de México</p>
                         </div>
                     </div>
@@ -654,6 +654,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="cont-btnEvaluar">
+            <a id="evaluarCuestionario" href="#">Evaluar</a>
         </div>
     </div>  
 </body>
