--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -16,49 +16,69 @@
         </p>
     </div>
     <div class="contenedorPrinPag20">
-        <figure class="libro" id="libro1">
-            <img src="/build/img/contenido/Pag20/libro-azul.svg" alt="libro azul">
+        <figure class="libro activo" id="libro1">
+            <a href="javascript:mostrarT1()">
+                <img src="/build/img/contenido/Pag20/libro-azul.svg" alt="libro azul">
+            </a>
         </figure>
         <figure class="tarjeta" id="tarjeta1">
-            <p>
-                Cumplir con lo dispuesto por la LISF, las Disposiciones y demás normativas aplicables a la materia.
-            </p>
+            <a href="javascript:mostrarL1()">
+                <p>
+                    Cumplir con lo dispuesto por la LISF, las Disposiciones y demás normativas aplicables a la materia.
+                </p>
+            </a>
         </figure>
 
-        <figure class="libro" id="libro2">
-            <img src="/build/img/contenido/Pag20/libro-naranja.svg" alt="libro naranja">
+        <figure class="libro activo" id="libro2">
+            <a href="javascript:mostrarT2()">
+                <img src="/build/img/contenido/Pag20/libro-naranja.svg" alt="libro naranja">
+            </a>
         </figure>
         <figure class="tarjeta" id="tarjeta2">
-            <p>
-                Establecer las medidas y procedimientos mínimos a observar para prevenir y detectar los actos, omisiones y operaciones que pudieran favorecer, prestar ayuda, auxilio o cooperación de cualquier especie para la comisión de los delitos previstos en los artículos 139, 139 Quáter, 148 Bis o 400 Bis del Código Penal Federal.
-            </p>
+            <a href="javascript:mostrarL2()">
+                <p>
+                    Establecer las medidas y procedimientos mínimos a observar para prevenir y detectar los actos, omisiones y operaciones que pudieran favorecer, prestar ayuda, auxilio o cooperación de cualquier especie para la comisión de los delitos previstos en los artículos 139, 139 Quáter, 148 Bis o 400 Bis del Código Penal Federal.
+                </p>
+            </a>
         </figure>
 
-        <figure class="libro" id="libro3">
-            <img src="/build/img/contenido/Pag20/libro-amarillo.svg" alt="libro amarillo">
+        <figure class="libro activo" id="libro3">
+            <a href="javascript:mostrarT3()">
+                <img src="/build/img/contenido/Pag20/libro-amarillo.svg" alt="libro amarillo">
+            </a>
         </figure>
         <figure class="tarjeta" id="tarjeta3">
-            <p>
-                Prevenir que las Operaciones de la Compañía sean utilizadas para ocultar el origen de los recursos de procedencia ilícita y/o para financiar actos terroristas, y por lo tanto, se dañe la reputación de la Compañía.
-            </p>
+            <a href="javascript:mostrarL3()">
+                <p>
+                    Prevenir que las Operaciones de la Compañía sean utilizadas para ocultar el origen de los recursos de procedencia ilícita y/o para financiar actos terroristas, y por lo tanto, se dañe la reputación de la Compañía.
+                </p>
+            </a>
         </figure>
 
-        <figure class="libro" id="libro4">
-            <img src="/build/img/contenido/Pag20/libro-verde.svg" alt="libro verde">
+        <figure class="libro activo" id="libro4">
+            <a href="javascript:mostrarT4()">
+                <img src="/build/img/contenido/Pag20/libro-verde.svg" alt="libro verde">
+            </a>
         </figure>
         <figure class="tarjeta" id="tarjeta4">
-            <p>
-                Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitana los colaboradores de la Compañía establecer sistemas preventivos de identificación y de conocimiento del Cliente; a fin de mitigar el riesgo de realizar operaciones que pudieran verse implicadas en los supuestos antes referidos.
-            </p>
+            <a href="javascript:mostrarL4()">
+                <p>
+                    Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitana los colaboradores de la Compañía establecer sistemas preventivos de identificación y de conocimiento del Cliente; a fin de mitigar el riesgo de realizar operaciones que pudieran verse implicadas en los supuestos antes referidos.
+                </p>
+            </a>
         </figure>
-        <figure class="libro" id="libro5">
-            <img src="/build/img/contenido/Pag20/libro-azur.svg" alt="libro azul fuerte">
+        <figure class="libro activo" id="libro5">
+            <a href="javascript:mostrarT5()">
+                <img src="/build/img/contenido/Pag20/libro-azur.svg" alt="libro azul fuerte">
+            </a>
         </figure>
         <figure class="tarjeta" id="tarjeta5">
-            <p>
-                Ser una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán detectar y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al financiamiento del terrorismo; así como realizar el reporte de cualquier operación a la autoridad.
+            <a href="javascript:mostrarL5()">
+                <p>
+                    Ser una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán detectar y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al financiamiento del terrorismo; así como realizar el reporte de cualquier operación a la autoridad.
 
-            </p>
+                </p>
+            </a>
         </figure>
     </div>
     <div class="cuadro2click">
@@ -95,12 +115,19 @@
                 </p>
             </div>
             <div class="cuadro-central">
-                <figure class="icon-c">
-                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
-                </figure>
-                <figure class="cuadro-c">
-                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
-                </figure>
+                <a href="javascript:cuadroDif1()">
+                    <figure class="cuadro-c activo" id="cuadro-c1">
+                        <img src="./build/img/contenido/Pag20/cuadro-central2.svg" alt="icono persona">
+                    </figure>
+                </a>
+                <a href="javascript:cuadroRes1()">
+                    <figure class="res-c" id="res-c1">
+                        <img src="./build/img/contenido/Pag20/respuesta-central.svg" alt="respuesta central">
+                        <p>
+                            Propósito del Delito
+                        </p>
+                    </figure>
+                </a>
             </div>
             <div class="cuadro-claro">
                 <p>
@@ -116,12 +143,20 @@
                 </p>
             </div>
             <div class="cuadro-central">
-                <figure class="icon-c">
-                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
-                </figure>
-                <figure class="cuadro-c">
-                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
-                </figure>
+                <a href="javascript:cuadroDif2()">
+                    <figure class="cuadro-c activo" id="cuadro-c2">
+                        <img src="./build/img/contenido/Pag20/cuadro-central2.svg" alt="icono persona">
+                    </figure>
+                </a>
+                <a href="javascript:cuadroRes2()">
+                    <figure class="res-c" id="res-c2">
+                        <img src="./build/img/contenido/Pag20/respuesta-central.svg" alt="respuesta central">
+                        <p>
+                            Fuente o procedencia de los fondos
+    
+                        </p>
+                    </figure>
+                </a>
             </div>
             <div class="cuadro-claro">
                 <p>
@@ -137,12 +172,19 @@
                 </p>
             </div>
             <div class="cuadro-central">
-                <figure class="icon-c">
-                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
-                </figure>
-                <figure class="cuadro-c">
-                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
-                </figure>
+                <a href="javascript:cuadroDif3()">
+                    <figure class="cuadro-c activo" id="cuadro-c3">
+                        <img src="./build/img/contenido/Pag20/cuadro-central2.svg" alt="icono persona">
+                    </figure>
+                </a>
+                <a href="javascript:cuadroRes3()">
+                    <figure class="res-c" id="res-c3">
+                        <img src="./build/img/contenido/Pag20/respuesta-central.svg" alt="respuesta central">
+                        <p>
+                            Volumen de fondos
+                        </p>
+                    </figure>
+                </a>
             </div>
             <div class="cuadro-claro">
                 <p>
@@ -159,12 +201,19 @@
                 </p>
             </div>
             <div class="cuadro-central">
-                <figure class="icon-c">
-                    <img src="./build/img/contenido/Pag20/persona-central.svg" alt="icono persona">
-                </figure>
-                <figure class="cuadro-c">
-                    <img src="./build/img/contenido/Pag20/cuadro-central.svg" alt="cuadro central">
-                </figure>
+                <a href="javascript:cuadroDif4()">
+                    <figure class="cuadro-c activo" id="cuadro-c4">
+                        <img src="./build/img/contenido/Pag20/cuadro-central2.svg" alt="icono persona">
+                    </figure>
+                </a>
+                <a href="javascript:cuadroRes4()">
+                    <figure class="res-c" id="res-c4">
+                        <img src="./build/img/contenido/Pag20/respuesta-central.svg" alt="respuesta central">
+                        <p>
+                            Momento del Delito
+                        </p>
+                    </figure>
+                </a>  
             </div>
             <div class="cuadro-claro">
                 <p>
@@ -174,64 +223,80 @@
         </div>
     </div>
 
-    <div class="cuadro2click">
+    <div class="cuadro2click2">
         <figure class="icon2c">
             <img src="./build/img/contenido/Pag20/icon2click.svg" alt="icono click">
         </figure>
         <p>
-            Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
+            Da clic en cada icono para conocer las semejanzas entre el Lavado de Dinero y el Financiamiento al Terrorismo. 
         </p>
     </div>
     <div class="contenido2">
-        <div class="nivel01">
-            <div class="cuadro-negro">
-                <p>
-                    LAVADO DE DINERO
-                </p>
-            </div>
-            <div class="cuadro-naranja">
-                <p>
-                    DIFERENCIAS
-                </p>
-            </div>
-            <div class="cuadro-azul">
-                <p>
-                    FINANCIAMIENTO AL TERRORISMO
-                </p>
-            </div>
-        </div>
         <div class="contenido3">
-            <div class="maletin">
-                <figure class="i-maletin">
-                    <img src="./build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
-                </figure>
-                <p>
-                    Son delitos financieros que tienen consecuencias económicas.
-                </p>             
+            <div class="nivel02">
+                <div class="cuadro-negro">
+                    <p>
+                        LAVADO DE DINERO
+                    </p>
+                </div>
+                <div class="cuadro-naranja">
+                    <p>
+                        SEMEJANZAS
+                    </p>
+                </div>
+                <div class="cuadro-azul">
+                    <p>
+                        FINANCIAMIENTO AL TERRORISMO
+                    </p>
+                </div>
             </div>
-            <div class="maletin">
-                <figure class="i-maletin">
-                    <img src="./build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
-                </figure>
-                <p>
-                    Pueden amenazar su estabilidad del sector financiero de un país.
-                </p>             
+            <div class="maletin" id="maletin-amarillo">
+                <a href="javascript:mostrarAmarillo()">
+                    <figure class="i-maletin">
+                        <img src="./build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
+                    </figure>
+                </a>
+                <div class="mensajeSem" id="mAmarillo">
+                    <p>
+                        Son delitos financieros que tienen consecuencias económicas.
+                    </p>     
+                </div>        
             </div>
-            <div class="maletin">
-                <figure class="i-maletin">
-                    <img src="./build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
-                </figure>
-                <p>
-                    La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
-                </p>             
+            <div class="maletin" id="maletin-verde">
+                <a href="javascript:mostrarVerde()">
+                    <figure class="i-maletin">
+                        <img src="./build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
+                    </figure>
+                </a>
+                <div class="mensajeSem" id="mVerde">
+                    <p>
+                        Pueden amenazar su estabilidad del sector financiero de un país.
+                    </p>  
+                </div>           
             </div>
-            <div class="maletin">
-                <figure class="i-maletin">
-                    <img src="./build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
-                </figure>
-                <p>
-                    Propician el anonimato y la falta de transparencia en sus transacciones.
-                </p>             
+            <div class="maletin" id="maletin-azul">
+                <a href="javascript:mostrarAzul()">
+                    <figure class="i-maletin">
+                        <img src="./build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
+                    </figure>
+                </a>
+                <div class="mensajeSem" id="mAzul">
+                    <p>
+                        La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
+                    </p> 
+                </div>            
+            </div>
+            <div class="maletin" id="maletin-rojo">
+                <a href="javascript:mostrarRojo()">
+                    <figure class="i-maletin">
+                        <img src="/build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
+                    </figure>
+                </a>
+                <div class="mensajeSem" id="mRojo">
+                    <p>
+                        Propician el anonimato y la falta de transparencia en sus transacciones.
+                    </p>
+                </div>             
             </div>
         </div>
     </div>
