--- a/contenido/pag21.html
+++ b/contenido/pag21.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="cuestionario2">
-        <div class="contenedor2 activo">
+        <div class="contenedor2 activo" id="inicioCuest21">
             <div class="contenedor1">
                 <figure class="persona1">
                     <img src="../build/img/contenido/Pag21/persona1.svg" alt="persona 1">
@@ -20,11 +20,11 @@
                 </div>
             </div>
             <div class="iniciar">
-                <button>Iniciar</button>
+                <input type="button" id="iniciar" value="Iniciar" onclick="iniciarCuestionarioPag21()">
             </div>
         </div>
     </div>
-    <div class="contenido21">
+    <div class="contenido21" id="contenidoPag21">
         <div class="cuadro2click">
             <figure class="icon2c">
                 <img src="../build/img/contenido/Pag20/icon2click.svg" alt="icono click">
@@ -33,7 +33,7 @@
                 Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del Financiamiento al Terrorismo.
             </p>
         </div>
-        <div class="actividad21">
+        <div class="actividad21" >
             <div class="columna1">
                 <div class="cuadroC1">
                     <p>
@@ -119,19 +119,16 @@
                 </div>
             </div>
         </div>
-        <div class="contenedor21final">
+    </div>
+    <div class="contenedor21final">
+        <div class="cuadro-amarillo21">
             <figure class="persona1-21">
-                <img src="../build/img/contenido/Pag21/persona1.svg" alt="persona 1 fin 21">
+                <img src="/build/img/contenido/Pag21/persona2.svg" alt="persona 1 fin 21">
             </figure>
-            <div class="cuadro-amarillo21">
-                <figure class="persona1-21">
-                    <img src="/build/img/contenido/Pag21/persona2.svg" alt="persona 1 fin 21">
-                </figure>
-                <div class="cuadro-azul21">
-                    <p>
-                        ¡Muy bien! Espero que esta actividad te haya refrescado la memoria, ahora continuemos con la segunda parte de tu curso PLD/CFT.
-                    </p>
-                </div>
+            <div class="cuadro-azul21">
+                <p>
+                    ¡Muy bien! Espero que esta actividad te haya refrescado la memoria, ahora continuemos con la segunda parte de tu curso PLD/CFT.
+                </p>
             </div>
         </div>
     </div>
